--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 #292841
 #f6f6f6
+#23272a
 */
 
 /* Generics */
@@ -21,6 +22,10 @@ header{
     background-color: #3161e0;
 }
 
+footer{
+    min-height: 200px;
+    background-color: #23272a;
+}
 /* Utils */
 
 .flex-container{
@@ -93,4 +98,46 @@ section aside{
     min-width: 500px;
     min-height: 100px;
     background-color: #292841;
+}
+
+/* footer */
+.footer-container{
+    min-height: 600px;
+    padding: 150px 200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+
+}
+
+.footer-social-links{
+    background-color: #33beb5;
+    min-width: 27%;
+    min-height: 300px;
+}
+
+.footer-info{
+    min-width: 67%;
+    min-height: 300px;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+
+}
+
+.column{
+    min-width: 50px;
+    min-height: 100px;
+    background-color: #33beb5;
+
+}
+
+.subscribe{
+    padding: 50px 200px;
+    
+}
+
+.subscribe section{
+    height: 50px;
+    background-color: #33beb5;
 }
